# cmake-demo

./: README.md
mydemo/: CMakeLists.txt
mydemo/main/: CMakeLists.txt
mydemo/math/: CMakeLists.txt
